fix(theme): add less variable to opt-out of high-contrast theme bundling (#3861)

--- a/src/styles/mixins/color-modes.less
+++ b/src/styles/mixins/color-modes.less
@@ -8,7 +8,9 @@
 }
 
 .high-contrast-mode(@rules) {
-  .rs-theme-high-contrast & {
-    @rules();
+  & when (@enable-high-contrast = true) {
+    .rs-theme-high-contrast & {
+      @rules();
+    }
   }
 }
