--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -23,6 +23,9 @@
 // Whether include styles for dark mode
 @enable-dark-mode:      true;
 
+// Whether include styles for high-contrast mode
+@enable-high-contrast:  true;
+
 // Media queries breakpoints
 // Define the breakpoints at which your layout will change, adapting to different screen sizes.
 
